update text fields hide divs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="o-layout-container--slim">
       <div class="c-header__wrapper">
         <div class="o-logo">
-          <img src="./assets/images/mug-no-name.png" alt="Hotcup Logo">
+          <img src="./assets/images/mug.png" alt="Hotcup Logo">
         </div>
         <ul class="c-nav">
           <li>
@@ -27,9 +27,9 @@
           </li>
         </ul>
         <div class="o-social">
-          <a href "https:twitter.com">
+          <!-- <a href "https:twitter.com">
             <i class="fab fa-twitter"></i>
-          </a>
+          </a> -->
           <a href "https:twitter.com">
             <i class="fab fa-facebook"></i>
           </a>
@@ -49,25 +49,25 @@
       </h1>
 
       <div class="c-featured">
-        <img class="c-featured__image" src="./assets/images/flickybricks/screen-grab.png" alt="Flicky bricks pic">
+        <!-- <img class="c-featured__image" src="./assets/images/flickybricks/screen-grab.png" alt="Flicky bricks pic"> -->
         <h2 class="c-featured__title">Flicky Bricks</h2>
         <div class="c-featured__app-links">
-          <a href='http://play.google.com/store/apps/details?id=<package_name>&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+          <a href='http://play.google.com/store/apps/details?id=com.hotcup.bricky'>
             <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'
             />
           </a>
         </div>
       </div>
+
+
     </div>
     <!-- Background pattern from Toptal Subtle Patterns -->
     <section class="o-section-background" id="about" style="background-image: url(./assets/images/background.png)">
       <div class="o-layout-container">
         <div class="c-content">
           <h2>About us</h2>
-          <p>Nunc sed turpis. Donec venenatis vulputate lorem. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius
-            nisi, condimentum viverra felis nunc et lorem. Cras non dolor.</p>
-          <p>Praesent ut ligula non mi varius sagittis. Pellentesque ut neque. Curabitur blandit mollis lacus. Aenean ut eros
-            et nisl sagittis vestibulum.</p>
+          <p>We are a transatlantic team of two twenty somethings with a passion for creating fun, addictive, 2d mobile games.</p>
+          <p>We have a passion for well made games and are excited to be working on new future releases.</p>
         </div>
       </div>
 
@@ -78,17 +78,17 @@
         <div class="c-content__column c-person js-card">
           <div class="c-person__card c-person__card--front">
             <img class="c-person__image" src="./assets/images/adam.png" alt="Adam Lees Hot Cup">
-            <p class="c-person__name">Adam Lees</p>
-            <p class="c-person__role">App Developer</p>
+            <p class="c-person__name">Adam</p>
+            <p class="c-person__role">Programmer</p>
 
           </div>
           <div class="c-person__card c-person__card--back">
             <p>
-              <span>HotCup of choice</span>Coffee (Java)</p>
+              <span>HotCup of choice</span>Coffee</p>
             <p>
-              <span>Fav Games</span>Borderlands 2, Grim Fandango</p>
+              <span>Fav Games</span>Final fantasy, Borderlands 2</p>
             <p>
-              <span>Tipple</span>Cloudwater, Deya</p>
+              <span>Tipple</span>Franziskaner, Balvenie</p>
           </div>
         </div>
 
@@ -97,14 +97,14 @@
           <div class="c-person__card c-person__card--front">
             <img class="c-person__image" src="./assets/images/chris.png" alt="Adam Lees Hot Cup">
             <p class="c-person__name">Chris</p>
-            <p class="c-person__role">App Developer</p>
+            <p class="c-person__role">Artist</p>
 
           </div>
           <div class="c-person__card c-person__card--back">
             <p>
-              <span>HotCup of choice</span>Coffee (Java)</p>
+              <span>HotCup of choice</span>Green tea</p>
             <p>
-              <span>Fav Games</span>Borderlands 2, Grim Fandango</p>
+              <span>Fav Games</span>Edith finch, Divinity</p>
             <p>
               <span>Tipple</span>Cloudwater, Deya</p>
           </div>
@@ -116,9 +116,9 @@
     <div class="o-layout-container--slim">
       <p>&copy;2018 HotCup</p>
       <div class="o-social">
-        <a href "https:twitter.com">
+        <!-- <a href "https:twitter.com">
           <i class="fab fa-twitter"></i>
-        </a>
+        </a> -->
         <a href "https:twitter.com">
           <i class="fab fa-facebook"></i>
         </a>
