add email to footer

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <footer class="c-footer">
     <div class="o-layout-container--slim">
-      <p>&copy;2018 HotCup</p>
+      <p>&copy;2018 HotCup - hotcupsutdio@gmail.com</p>
       <div class="o-social">
         <!-- <a href "https:twitter.com">
           <i class="fab fa-twitter"></i>
