--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         <h2 class="c-featured__title">Flicky Bricks</h2>
         <div class="c-featured__app-links">
           <a href='http://play.google.com/store/apps/details?id=com.hotcup.bricky'>
-            <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'
-            />
+            <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/>
+          </a>
+          <a href='https://itunes.apple.com/us/app/flicky-bricks/id1415528223?ls=1&mt=8'>
+            <img alt='Get it on Google Play' src='./assets/images/iosapp.png'/>
           </a>
         </div>
       </div>
